[package]
name = "vexmason"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argmap = "1.1.2"
dunce = "1.0.4"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
futures = "0.3.30"
octocrab = "0.34.1"
reqwest = { version = "0.11.24", features = ["stream"] }
semver = "1.0.21"
serde_json = "1.0"
tempfile = "3.9.0"
