[package]
name = "vexmason"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
chrono = "0.4.34"
dunce = "1.0.4"
flexi_logger = "0.27"
lazy_static = "1.4.0"
log = "0.4"
tokio = { version = "1.36.0", features = ["full"] }
octocrab = "0.34.1"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["stream"] }
semver = "1.0.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[features]
stderr_log = []
